test_regress/t/t_interface_generic_modport_task_bad.out
%Error: t/t_interface_generic_modport_task_bad.v:23:7: Can't find definition of 'setup' in dotted task/function: 'a.setup'
                                                     : ... note: In instance 't.genericModule'
   23 |     a.setup();
      |       ^~~~~
        ... Known scopes under 'setup': <no instances found>
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
